@@ -5,38 +5,111 @@ import grupo1.esimedia.Content.model.Content;
 import grupo1.esimedia.Content.model.ContentState;
 import grupo1.esimedia.Content.repository.CreatorContentRepository;
 import grupo1.esimedia.service.RatingService;
+
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
+import grupo1.esimedia.Accounts.model.User;
+import grupo1.esimedia.Accounts.repository.UserRepository;
+
+import java.time.LocalDate;
+import java.time.Period;
+import java.time.format.DateTimeParseException;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/public/contents")
-@CrossOrigin(origins = "http://localhost:3000")
+@PreAuthorize("hasRole('USER')")
 public class PublicContentViewController {
 
     private final CreatorContentRepository contentRepository;
     private final RatingService ratingService;
+    private final UserRepository userRepository;
 
-    public PublicContentViewController(CreatorContentRepository contentRepository, RatingService ratingService) {
+    public PublicContentViewController(CreatorContentRepository contentRepository, RatingService ratingService, UserRepository userRepository) {
         this.contentRepository = contentRepository;
         this.ratingService = ratingService;
+        this.userRepository = userRepository;
+    }
+
+    /**
+     * Verifica si el contenido es accesible por el usuario autenticado.
+     */
+private boolean isContentAccessible(Content content) {
+        // 1. Debe ser PUBLICO
+        if (content.getState() != ContentState.PUBLICO) {
+            return false;
+        }
+
+        // Obtener el objeto User para la validación de Edad y VIP
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        String userEmail = auth.getName(); 
+
+        Optional<User> userOpt = userRepository.findById(userEmail);
+        
+        if (userOpt.isEmpty()) {
+             // El usuario autenticado (ROLE_USER) no existe en la base de datos
+             return false;
+        }
+
+        User user = userOpt.get();
+        
+        // 2. VALIDACIÓN DE EDAD: El usuario debe ser mayor o igual a la edad mínima
+        if (content.getEdadMinima() > 0) {
+            String dobString = user.getDateOfBirth(); 
+            
+            if (dobString == null || dobString.isBlank()) {
+                return false; // Denegar si no hay fecha de nacimiento para contenido restringido
+            }
+
+            try {
+                LocalDate dateOfBirth = LocalDate.parse(dobString); 
+                
+                // Calcular edad
+                LocalDate now = LocalDate.now();
+                int age = Period.between(dateOfBirth, now).getYears();
+                
+                if (age < content.getEdadMinima()) {
+                    return false; // Bloquear si el usuario es menor
+                }
+            } catch (DateTimeParseException e) {
+                // Si el formato del String es incorrecto, lo tratamos como denegado por seguridad
+                return false; 
+            }
+        }
+
+
+        // 3. VALIDACIÓN VIP (Si el contenido es VIP, el usuario debe ser VIP)
+        if (content.isVipOnly()) {
+            if (!user.isVip()) {
+                return false; // Bloquear si es VIP_ONLY y el usuario no es VIP
+            }
+        }
+
+        // Si pasó todos los filtros (Público, Rol, Edad, VIP), es accesible.
+        return true;
     }
 
     // Get all public (PUBLICO) contents with their average rating calculated from ratings table
     @GetMapping
     public ResponseEntity<List<ContentWithRating>> getAllPublicContents() {
-        List<Content> contents = contentRepository.findByState(ContentState.PUBLICO);
-        
-        // Calcular el rating promedio para cada contenido desde la tabla ratings
-        List<ContentWithRating> contentsWithRating = contents.stream()
+        List<Content> allPublic = contentRepository.findByState(ContentState.PUBLICO);
+
+        // ✅ FILTRAR: Solo se incluyen los contenidos accesibles para el usuario
+        List<ContentWithRating> contentsWithRating = allPublic.stream()
+            .filter(this::isContentAccessible)
             .map(content -> {
                 double avgRating = ratingService.getAverageRatingByContentId(content.getId());
                 return new ContentWithRating(content, avgRating);
             })
-            .collect(Collectors.toList());
-        
+            .toList();
+
         return ResponseEntity.ok(contentsWithRating);
     }
 
@@ -47,15 +120,17 @@ public class PublicContentViewController {
         if (contentOpt.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
-        
+
         Content content = contentOpt.get();
-        if (content.getState() != ContentState.PUBLICO) {
-            return ResponseEntity.status(403).build();
+
+        // ✅ VALIDACIÓN: Si el contenido no es accesible (ej. es VIP y el usuario no), devolver 403
+        if (!isContentAccessible(content)) {
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
         }
-        
+
         double avgRating = ratingService.getAverageRatingByContentId(content.getId());
         ContentWithRating contentWithRating = new ContentWithRating(content, avgRating);
-        
+
         return ResponseEntity.ok(contentWithRating);
     }
 
@@ -63,13 +138,16 @@ public class PublicContentViewController {
     @GetMapping("/search")
     public ResponseEntity<List<ContentWithRating>> searchContent(@RequestParam String query) {
         List<Content> allPublic = contentRepository.findByState(ContentState.PUBLICO);
+
         List<ContentWithRating> filtered = allPublic.stream()
-                .filter(c -> c.getTitle().toLowerCase().contains(query.toLowerCase()))
-                .map(content -> {
-                    double avgRating = ratingService.getAverageRatingByContentId(content.getId());
-                    return new ContentWithRating(content, avgRating);
-                })
-                .toList();
+            .filter(c -> c.getTitle().toLowerCase().contains(query.toLowerCase()))
+            .filter(this::isContentAccessible)
+            .map(content -> {
+                double avgRating = ratingService.getAverageRatingByContentId(content.getId());
+                return new ContentWithRating(content, avgRating);
+            })
+            .toList();
+            
         return ResponseEntity.ok(filtered);
     }
 
@@ -77,12 +155,16 @@ public class PublicContentViewController {
     @GetMapping("/creator/{alias}")
     public ResponseEntity<List<ContentWithRating>> getContentsByCreator(@PathVariable String alias) {
         List<Content> contents = contentRepository.findByCreatorAliasAndState(alias, ContentState.PUBLICO);
+
+        // ✅ FILTRAR: Se filtra por creador Y por accesibilidad VIP
         List<ContentWithRating> contentsWithRating = contents.stream()
-                .map(content -> {
-                    double avgRating = ratingService.getAverageRatingByContentId(content.getId());
-                    return new ContentWithRating(content, avgRating);
-                })
-                .collect(Collectors.toList());
+            .filter(this::isContentAccessible)
+            .map(content -> {
+                double avgRating = ratingService.getAverageRatingByContentId(content.getId());
+                return new ContentWithRating(content, avgRating);
+            })
+            .collect(Collectors.toList());
+            
         return ResponseEntity.ok(contentsWithRating);
     }
 }
